--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -4,5 +4,14 @@
     "delete": "削除",
     "open": "外部サイトで開く",
     "move": "別のリストに移動"
+  },
+  "modal": {
+    "failed_copy": "コピーに失敗しました"
+  },
+  "PostNote": {
+    "copied": "クリップボードにコピーしました",
+    "failed_copy": "コピーに失敗しました",
+    "popup_copy": "クリップボードにコピー",
+    "p_tag": "引用元のpubkeyを含める"
   }
 }
