--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -58,5 +58,9 @@
     "add_note_to2": "] にノートを追加",
     "add_note_tag": "ブックマークに追加（タグから追加）",
     "create": "ノートを作成して追加"
+  },
+  "main": {
+    "title": "ぶくまびうあ改二",
+    "input_public_key": "公開鍵を入力してください"
   }
 }
