設定画面のレイアウト

--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -62,5 +62,11 @@
   "main": {
     "title": "ぶくまびうあ改二",
     "input_public_key": "公開鍵を入力してください"
+  },
+  "mode": {
+    "normal": "通常モード",
+    "light": "通信量軽量モード",
+    "light_exp": "※モバイル通信時など",
+    "light_switch": "ライトモード / ダークモードの切り替え"
   }
 }
