--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1,33 +1,38 @@
 {
-	"popup": {
-		"Share": "Post on Nostr",
-		"open": "Open other app",
-		"move": "Move ather list",
-		"delete": "Delete"
-	},
-	"modal": {
-		"failed_copy": "failed to copy"
-	},
-	"PostNote": {
-		"copied": "copied clipboard",
-		"failed_copy": "failed to copy clipboard",
-		"popup_copy": "copy to clipboard",
-		"p_tag": "Include the p tag of the quoted source"
-	},
-	"nprofile": {
-		"modal": {
-			"postNote": {
-				"title": "Post Note"
-			},
-			"tagList": {
-				"title": "Lists"
-			}
-		}
-	},
-	"created_at": "最終更新日時",
-	"public": "public",
-	"private": "private",
-	"editTag": "Edit",
-
-	"main": { "title": "bkmstr" }
+  "popup": {
+    "Share": "Post on Nostr",
+    "open": "Open other app",
+    "move": "Move ather list",
+    "delete": "Delete"
+  },
+  "modal": {
+    "failed_copy": "failed to copy"
+  },
+  "PostNote": {
+    "copied": "copied clipboard",
+    "failed_copy": "failed to copy clipboard",
+    "popup_copy": "copy to clipboard",
+    "p_tag": "Include the p tag of the quoted source"
+  },
+  "nprofile": {
+    "modal": {
+      "postNote": {
+        "title": "Post Note"
+      },
+      "tagList": {
+        "title": "Lists"
+      }
+    }
+  },
+  "created_at": "最終更新日時",
+  "public": "public",
+  "private": "private",
+  "editTag": "Edit",
+  "main": {
+    "title": "bkmstr"
+  },
+  "mode_light_exp": "use mobile communication, etc.",
+  "mode": {
+    "light_switch": "Switch between Light and Dark Mode"
+  }
 }
