--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -3,7 +3,9 @@
     "Share": "Post on Nostr",
     "open": "Open other app",
     "move": "Move ather list",
-    "delete": "Delete"
+    "delete": "Delete",
+    "pub": "public list",
+    "prv": "private list"
   },
   "modal": {
     "failed_copy": "failed to copy"
