--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -3,7 +3,9 @@
     "Share": "nostrで引用",
     "delete": "削除",
     "open": "外部サイトで開く",
-    "move": "別のリストに移動"
+    "move": "別のリストに移動",
+    "pub": "公開リスト",
+    "prv": "非公開リスト"
   },
   "modal": {
     "failed_copy": "コピーに失敗しました"
