--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -74,7 +74,7 @@
   "modalEditTag": {
     "list": {
       "title": "追加情報（あとから変更可能）",
-      "ID": "（必須 変更不可）"
+      "ID": "（必須 / 変更不可 / 英数字のみ入力可能）"
     }
   }
 }
