--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -39,7 +39,10 @@
         "title": "設定中のリレー情報"
       },
       "light_switch": "表示モード",
-      "share": "myListたち(閲覧中のURL)をnostrで共有"
+      "share": "myListたち(閲覧中のURL)をnostrで共有",
+      "urlandIcon": "アイコン、URLプレビューの表示・非表示",
+      "urlandIconOff": "軽量モード",
+      "urlandIconOn": "通常モード"
     },
     "listInfo": {
       "ex": {
