--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -42,7 +42,8 @@
       "share": "myListたち(閲覧中のURL)をnostrで共有",
       "urlandIcon": "アイコン、URLプレビューの表示・非表示",
       "urlandIconOff": "軽量モード",
-      "urlandIconOn": "通常モード"
+      "urlandIconOn": "通常モード",
+      "contentwarning": "コンテントワーニングの全表示"
     },
     "listInfo": {
       "ex": {
