--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -59,7 +59,7 @@
 	"public": "public",
 	"private": "private",
 	"main": {
-		"title": "bkmstr",
+		"title": "bkmstr（under development）",
 		"input_public_key": "🔑 public key"
 	},
 	"mode": {
