--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -109,7 +109,8 @@
     "nanka": "login error"
   },
   "toast": {
-    "failed_publish": "failed to publish"
+    "failed_publish": "failed to publish",
+    "invalidtag": "invalid tag"
   },
   "icon_description": "Icon description"
 }
