--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -95,7 +95,7 @@
   "ModalAddNote": {
     "add_note": "Add to list",
     "add_note_tag": "（Add by Tag）",
-    "add_note_to1": "Add Note to [",
+    "add_note_to1": "Add to [",
     "add_note_to2": "]",
     "create": "Create & AddNote",
     "create_to1": "Create and Add Note to [",
