--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -114,7 +114,8 @@
     "invalidJson": "File format not allowed, please select JSON file.",
     "selectJson": "please select JSON file.",
     "checkJson": "Invalid JSON file.",
-    "failed_npub": "check public key"
+    "failed_npub": "check public key",
+    "invalidEmoji": "same name exists"
   },
   "icon_description": "Icon description"
 }
