--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -67,6 +67,10 @@
     },
     "search": {
       "title": "Search"
+    },
+    "publishjson": {
+      "title": "Writes the data being displayed to the relay",
+      "body": "If there are any corrections you want to make, modify them and click Publish (the generated field will be updated automatically)."
     }
   },
   "created_at": "Last updated",
