れいあうとなんわか

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -77,7 +77,7 @@
   "public": "public",
   "private": "private",
   "main": {
-    "title": "bkmstr（under development）",
+    "title": "listvviewstr（under development）",
     "input_public_key": "🔑 public key"
   },
   "mode": {
