--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -93,7 +93,7 @@
     "create_body": "ポストする内容を入力してください（kind:1ノートのcontent）"
   },
   "main": {
-    "title": "ぶくまびうあ改二（開発中）",
+    "title": "りすとびうあ（開発中）",
     "input_public_key": "🔑公開鍵(public key)"
   },
   "mode": {
