--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -123,7 +123,8 @@
     "invalidEmoji": "same name exists",
     "relaySearching": "Relay Searching ...",
     "eventSearching": "Searching events ...",
-    "invalidEvent": "invalid event"
+    "invalidEvent": "invalid event",
+    "checkRelay": "Check relay address"
   },
   "icon_description": "Icon description"
 }
