relay state fix

--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -35,7 +35,7 @@
     "info": {
       "title": "設定",
       "relay": {
-        "list": "リスト取得用",
+        "list": "読み込み用",
         "search": "ノートの検索用",
         "title": "設定中のリレー",
         "white": "書込用リレー"
