--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -95,7 +95,7 @@
     "create": "ノートを作成して追加",
     "create_to1": "ノートを作成して、[",
     "create_to2": "]に追加",
-    "create_body": "ポストする内容を入力してください（kind:1ノートのcontent）"
+    "create_body": "ポストする内容を入力してください（kind:1ノートのcontent）（privateに追加してもkind:1は公開されます）"
   },
   "main": {
     "title": "りすとびうあ（開発中）",
